# duckdb-ip-extension

./: .gitignore  .gitmodules  BENCHMARK.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  TODO.md  deny.toml  description.yml  extension_config.cmake
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  release.yml
benches/: ip_bench.rs
dev/check-duckdb-pins/: Cargo.toml
dev/check-duckdb-pins/src/: main.rs
src/: extension.rs  lib.rs  wasm_lib.rs
src/inet/: mod.rs  scalar.rs
src/ip/: mod.rs  scalar.rs
tests/: integration_sql.rs
